libnma: vpn-password-dialog: introduce new generic API
The new API can handle a potentially arbitrary number of fields (now
limited to 6), where each field can be either a password or a
not. This will be used soon in nm-openvpn to ask the username in
addition to existing passwords.

--- a/src/libnma/nma-vpn-password-dialog.ui
+++ b/src/libnma/nma-vpn-password-dialog.ui
@@ -74,10 +74,150 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="use_underline">True</property>
                 <property name="halign">start</property>
+                <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
                 <signal name="toggled" handler="show_passwords_toggled_cb" swapped="no"/>
+              </object>
+              <packing>
+                <property name="left_attach">2</property>
+                <property name="top_attach">7</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="field_label_0">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">_Password:</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">field_entry_0</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="field_label_1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">_Secondary Password:</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">field_entry_1</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="field_label_2">
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">_Tertiary Password:</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">field_entry_2</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="field_label_3">
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">Password #3:</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">field_entry_3</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">4</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="field_label_4">
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">Password #4:</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">field_entry_4</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">5</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="field_label_5">
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">Password #5:</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">field_entry_5</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">6</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="field_entry_0">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="no_show_all">True</property>
+                <property name="visibility">False</property>
+                <property name="width_chars">20</property>
+                <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
+              </object>
+              <packing>
+                <property name="left_attach">2</property>
+                <property name="top_attach">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="field_entry_1">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="no_show_all">True</property>
+                <property name="visibility">False</property>
+                <property name="width_chars">20</property>
+                <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
+              </object>
+              <packing>
+                <property name="left_attach">2</property>
+                <property name="top_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="field_entry_2">
+                <property name="can_focus">True</property>
+                <property name="no_show_all">True</property>
+                <property name="visibility">False</property>
+                <property name="width_chars">20</property>
+                <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
+              </object>
+              <packing>
+                <property name="left_attach">2</property>
+                <property name="top_attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="field_entry_3">
+                <property name="can_focus">True</property>
+                <property name="no_show_all">True</property>
+                <property name="visibility">False</property>
+                <property name="width_chars">20</property>
+                <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
               </object>
               <packing>
                 <property name="left_attach">2</property>
@@ -85,7 +225,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="password_entry_tertiary">
+              <object class="GtkEntry" id="field_entry_4">
                 <property name="can_focus">True</property>
                 <property name="no_show_all">True</property>
                 <property name="visibility">False</property>
@@ -94,12 +234,11 @@
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">3</property>
+                <property name="top_attach">5</property>
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="password_entry_secondary">
-                <property name="visible">True</property>
+              <object class="GtkEntry" id="field_entry_5">
                 <property name="can_focus">True</property>
                 <property name="no_show_all">True</property>
                 <property name="visibility">False</property>
@@ -108,65 +247,7 @@
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkEntry" id="password_entry">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="no_show_all">True</property>
-                <property name="visibility">False</property>
-                <property name="width_chars">20</property>
-                <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
-              </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="password_label_tertiary">
-                <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
-                <property name="label" translatable="yes">_Tertiary Password:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">password_entry_tertiary</property>
-                <property name="xalign">0</property>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="password_label_secondary">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
-                <property name="label" translatable="yes">_Secondary Password:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">password_entry_secondary</property>
-                <property name="xalign">0</property>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="password_label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
-                <property name="label" translatable="yes">_Password:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">password_entry</property>
-                <property name="xalign">0</property>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">1</property>
+                <property name="top_attach">6</property>
               </packing>
             </child>
             <child>
@@ -189,18 +270,18 @@
               <object class="GtkImage">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="valign">start</property>
                 <property name="margin_start">6</property>
                 <property name="margin_end">12</property>
                 <property name="margin_top">6</property>
                 <property name="margin_bottom">6</property>
-                <property name="valign">start</property>
                 <property name="icon_name">dialog-password</property>
                 <property name="icon_size">6</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">0</property>
-                <property name="height">5</property>
+                <property name="height">8</property>
               </packing>
             </child>
             <child>
