--- a/src/info.ui
+++ b/src/info.ui
@@ -5,10 +5,7 @@
   <object class="GtkDialog" id="info_dialog">
     <property name="width_request">600</property>
     <property name="can_focus">False</property>
-    <property name="margin_start">5</property>
-    <property name="margin_end">5</property>
-    <property name="margin_top">5</property>
-    <property name="margin_bottom">5</property>
+    <property name="border_width">5</property>
     <property name="title" translatable="yes">Connection Information</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
