nma/mobile-wizard: hide the dev combo if we're not choosing a device
It's just not nice.

--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -137,8 +137,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel">
-            <property name="visible">True</property>
+          <object class="GtkLabel" id="dev_combo_label">
             <property name="can_focus">False</property>
             <property name="valign">end</property>
             <property name="vexpand">True</property>
@@ -154,7 +153,6 @@
         </child>
         <child>
           <object class="GtkComboBox" id="dev_combo">
-            <property name="visible">True</property>
             <property name="sensitive">False</property>
             <property name="can_focus">False</property>
             <property name="model">dev_store</property>
