--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -186,7 +186,7 @@
           <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Country or Region List:</property>
+            <property name="label" translatable="yes">Country or region:</property>
             <property name="xalign">0</property>
           </object>
           <packing>
@@ -209,6 +209,7 @@
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="model">country_sort</property>
+                <property name="headers_visible">False</property>
                 <property name="search_column">0</property>
                 <signal name="row-activated" handler="country_update_continue" swapped="yes"/>
                 <child internal-child="selection">
