nma/mobile-wizard: proceed to next page on double-clicking the provider
A slight usability improvement.

--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -271,6 +271,7 @@
                 <property name="can_focus">True</property>
                 <property name="model">providers_sort</property>
                 <property name="search_column">0</property>
+                <signal name="row-activated" handler="providers_update_continue" swapped="yes"/>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection"/>
                 </child>
