editor: macsec: add mnemonics
https://bugzilla.redhat.com/show_bug.cgi?id=1709431

--- a/src/connection-editor/ce-page-macsec.ui
+++ b/src/connection-editor/ce-page-macsec.ui
@@ -55,7 +55,9 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">end</property>
-        <property name="label" translatable="yes">Device name</property>
+        <property name="label" translatable="yes">_Device name</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_name</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -80,7 +82,9 @@
         <property name="can_focus">False</property>
         <property name="halign">end</property>
         <property name="hexpand">False</property>
-        <property name="label" translatable="yes">Parent device</property>
+        <property name="label" translatable="yes">_Parent device</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_parent</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -128,7 +132,9 @@
         <property name="can_focus">False</property>
         <property name="halign">end</property>
         <property name="hexpand">False</property>
-        <property name="label" translatable="yes">Mode</property>
+        <property name="label" translatable="yes">_Mode</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_mode</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -159,7 +165,9 @@
         <property name="can_focus">False</property>
         <property name="halign">end</property>
         <property name="hexpand">False</property>
-        <property name="label" translatable="yes">CAK</property>
+        <property name="label" translatable="yes">C_AK</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_cak</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -182,7 +190,9 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">end</property>
-        <property name="label" translatable="yes">CKN</property>
+        <property name="label" translatable="yes">C_KN</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_ckn</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -221,7 +231,9 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">end</property>
-        <property name="label" translatable="yes">Validation</property>
+        <property name="label" translatable="yes">_Validation</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_validation</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -251,7 +263,9 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">end</property>
-        <property name="label" translatable="yes">SCI port</property>
+        <property name="label" translatable="yes">_SCI port</property>
+        <property name="use_underline">True</property>
+        <property name="mnemonic_widget">macsec_sci_port</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -274,7 +288,8 @@
     </child>
     <child>
       <object class="GtkCheckButton" id="macsec_encryption">
-        <property name="label" translatable="yes">Encrypt</property>
+        <property name="label" translatable="yes">_Encrypt</property>
+        <property name="use_underline">True</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
