--- a/src/connection-editor/ce-page-wireguard.ui
+++ b/src/connection-editor/ce-page-wireguard.ui
@@ -20,7 +20,7 @@
   <object class="GtkDialog" id="PeerDialog">
     <property name="width_request">400</property>
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Edit Wireguard peer</property>
+    <property name="title" translatable="yes">Edit WireGuard peer</property>
     <property name="type_hint">dialog</property>
     <child>
       <placeholder/>
