ethernet-dialog: put labels in a size group
Otherwise they're not nicely aligned.

--- a/src/8021x.ui
+++ b/src/8021x.ui
@@ -186,4 +186,9 @@
       <action-widget response="-5">ok_button</action-widget>
     </action-widgets>
   </object>
+  <object class="GtkSizeGroup" id="size_group">
+    <widgets>
+      <widget name="network_name_label"/>
+    </widgets>
+  </object>
 </interface>
