--- a/src/connection-editor/ce-new-connection.ui
+++ b/src/connection-editor/ce-new-connection.ui
@@ -24,7 +24,7 @@
   </object>
   <object class="GtkDialog" id="new_connection_type_dialog">
     <property name="can_focus">False</property>
-    <property name="title"> </property>
+    <property name="title" translatable="yes">New Connection</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-always</property>
